# Agentic_JobApplication_tool

./: .gitignore  README.md
agent/: agent.py  main.py
backend/: agent_runner.py  database.py  endpoints.py  main.py  models.py  requirements.txt
frontend/: index.html
frontend/css/: animations.css  components.css  styles.css  theme.css
frontend/js/: api.js  app.js  components.js  router.js
jobapp_agent/: pyproject.toml
jobapp_agent/knowledge/: user_preference.txt
jobapp_agent/src/jobapp_agent/: crew.py  main.py
jobapp_agent/src/jobapp_agent/config/: agents.yaml  tasks.yaml
jobapp_agent/src/jobapp_agent/db/: config.py  database.py
jobapp_agent/src/jobapp_agent/db/sql/: create_schema.sql
jobapp_agent/src/jobapp_agent/tools/: duckduckgo_tool.py  job_database_tool.py  pdf_generator_tool.py
